--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,7 +21,7 @@
             android:name=".JsonActivity"
             android:exported="false" />
         <activity
-            android:name=".ui.ListUserActivity"
+            android:name=".listuser.ListUserActivity"
             android:exported="false" />
         <activity
             android:name=".MainActivity"
