--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,4 +62,7 @@ dependencies {
 
     //circle imageView
     implementation 'de.hdodenhof:circleimageview:3.1.0'
+
+    //Gson
+    implementation 'com.google.code.gson:gson:2.8.5'
 }
